--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                     <img src="https://s1.ax1x.com/2023/05/06/p9aOMbF.jpg" alt="" class="kkk" />
                   </div>
                   <div class="main-bot-nr-kp-k-n">
-                    <span class="p1"></span>
+                    <span class="p1">交流群</span>
                     <span class="p2">加入我们</span>
                   </div>
                 </div>
