--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
                     <img src="https://s1.ax1x.com/2023/05/06/p9aOuuT.jpg" alt="" class="kkk" />
                   </div>
                   <div class="main-bot-nr-kp-k-n">
-                    <span class="p1">备用链接</span>
-                    <span class="p2">全区1.2</span>
+                    <span class="p1">全网最低价↑↑↑</span>
+                    <span class="p2">选号一元</span>
                   </div>
                 </div>
               </a>
