--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
             <!-- 下部分内容区 -->
             <div class="main-bot-nr">
-              <a href="https://vn.vmp.cc/vniao/A513B670" class="main-bot-nr-kp">
+              <a href="https://mx.youyoupay.com/shop/F125CFA7" class="main-bot-nr-kp">
                 <div class="main-bot-nr-kp-k">
                   <div class="main-bot-nr-kp-k-img">
                     <img src="https://s1.ax1x.com/2023/05/06/p9aOlE4.jpg" alt="" class="kkk" />
@@ -81,18 +81,18 @@
                   </div>
                 </div>
               </a>
-              <a href="https://vn.vmp.cc/vniao/FE9FB78E" class="main-bot-nr-kp">
+              <a href="https://mx.youyoupay.com/shop/F125CFA7" class="main-bot-nr-kp">
                 <div class="main-bot-nr-kp-k">
                   <div class="main-bot-nr-kp-k-img">
                     <img src="https://s1.ax1x.com/2023/05/06/p9aOuuT.jpg" alt="" class="kkk" />
                   </div>
                   <div class="main-bot-nr-kp-k-n">
-                    <span class="p1">无畏契约黑号/资格号</span>
-                    <span class="p2">全网首发</span>
+                    <span class="p1">备用链接</span>
+                    <span class="p2">点击进入</span>
                   </div>
                 </div>
               </a>
-              <a href="https://vn.vmp.cc/vniao/A513B670" class="main-bot-nr-kp">
+              <a href="https://mx.youyoupay.com/shop/F125CFA7" class="main-bot-nr-kp">
                 <div class="main-bot-nr-kp-k">
                   <div class="main-bot-nr-kp-k-img">
                     <img src="https://s1.ax1x.com/2023/05/06/p9aOMbF.jpg" alt="" class="kkk" />
