--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                   </div>
                 </div>
               </a>
-              <a href="https://mx.youyoupay.com/shop/F125CFA7" class="main-bot-nr-kp">
+              <a href="https://68d.net/y0VNL" class="main-bot-nr-kp">
                 <div class="main-bot-nr-kp-k">
                   <div class="main-bot-nr-kp-k-img">
                     <img src="https://s1.ax1x.com/2023/05/06/p9aOuuT.jpg" alt="" class="kkk" />
