--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
             <!-- 下部分内容区 -->
             <div class="main-bot-nr">
-              <a href="https://vn.9ek.cn//vniao/D01DEE25" class="main-bot-nr-kp">
+              <a href="https://wn.vmp.cc//vniao/D01DEE25" class="main-bot-nr-kp">
                 <div class="main-bot-nr-kp-k">
                   <div class="main-bot-nr-kp-k-img">
                     <img src="https://s1.ax1x.com/2023/05/06/p9aOlE4.jpg" alt="" class="kkk" />
@@ -81,7 +81,7 @@
                   </div>
                 </div>
               </a>
-              <a href="https://vn.9ek.cn//vniao/D01DEE25" class="main-bot-nr-kp">
+              <a href="https://wn.vmp.cc//vniao/D01DEE25" class="main-bot-nr-kp">
                 <div class="main-bot-nr-kp-k">
                   <div class="main-bot-nr-kp-k-img">
                     <img src="https://s1.ax1x.com/2023/05/06/p9aOuuT.jpg" alt="" class="kkk" />
